New photos and text from holiday box card

--- a/queensofgoodness/brochure.html
+++ b/queensofgoodness/brochure.html
@@ -58,7 +58,7 @@
         </div>
         <br>
         <div>
-          <a href="https://queensofgoodness.com/products.html"><img class="img-fluid img-center" src="https://queensofgoodness.com/static/img/Display.jpg" alt="Product Display"></a></p>
+          <a href="https://queensofgoodness.com/products.html"><img class="img-fluid img-center" src="static/img/ProductStack.avif" alt="Product Display"></a></p>
         </div>
         <br>
         <div class="card bl-card">
@@ -80,7 +80,7 @@
             <div class="overlay-text-ct">
               <h4>Golden Milk</h4>
             </div>
-            <img src="static/img/GoldenLatte.png" class="img-fluid img-center">
+            <img src="static/img/GoldenLatte.avif" class="img-fluid img-center">
           </div>
         </div>
         <br>
@@ -90,20 +90,20 @@
             <p class="card-text">Drink Ideas</p>
             <ul>
               <li><b>Golden Milk</b> - simply swirl a teaspoon or two into your favorite warm milk</li>
-              <li>Stir in a spoonful to coffee, tea or hot water</li>
-              <li>Make a simple syrup for mocktails and cocktails</li>
+              <li>Stir into coffee, tea or hot water</li>
+              <li>Make an all-natural, honey-sweetened simple syrup for mocktails and cocktails</li>
             </ul>
             <p>Food Ideas</p>
             <ul>
+              <li>Spread on biscuits, bagels, toast, English muffins or waffles</li>
               <li>Savor a spoonful or use as a delicious icing</li>
-              <li>Spread on biscuits, bagels, scones, toast or waffles</li>
               <li>Pair with apples, cheese, pretzels, yogurt or oatmeal</li>
             </ul>
           </div>
         </div>
         <br>
         <div>
-          <img src="static/img/Toast.jpeg" class="img-fluid img-panel">
+          <img src="static/img/Toast.avif" class="img-fluid img-panel">
         </div>
       </div>
       <div class="panel">
@@ -123,7 +123,7 @@
         </div>
         <br>
         <div>
-          <img src="static/img/Product%20stack.jpg" class="img-fluid img-center">
+          <img src="static/img/Oatmeal.avif" class="img-fluid img-center">
         </div>
         <br>
         <div class="card bl-card">
@@ -164,11 +164,11 @@
         <div class="card bl-card">
           <div class="card-header text-center">Storage Information</div>
           <div class="card-body">
-            <p>Store at room temperature, 68-78&deg;F (20-25&deg;C) for best consistency</p>
+            <p>Store at room temperature, 70-78&deg;F (21-25&deg;C) for best consistency</p>
             <p>Prolonged exposure to temperatures over 95&deg;F (35&deg;C) may result in
               the product becoming more liquid but it remains safe and delicious</p>
             <p>Shelf life is up to 4 years from production date</p>
-            <p>Warm gently and stir to soften</p>
+            <p>Warm gently and stir to soften if needed</p>
           </div>
         </div>
       </div>
