Add Mellisa's video

--- a/queensofgoodness/about.html
+++ b/queensofgoodness/about.html
@@ -176,7 +176,9 @@
         <div class="col">
           <div class="card h-100">
             <div class="card-header text-center">Our Story</div>
-            <img class="card-img-top" src="static/img/HoneyBeeDay24.jpeg">
+            <video class="card-img-top" controls>
+              <source src="static/img/Queens%20of%20Goodness_intro_sm.mp4" type="video/mp4">
+            </video>
             <div class="card-body">
               <h5 class="card-title text-center">Beekeeping</h5>
               <p class="card-text">I got my first beehive in 2018 and in spite of all the rookie
