Update text and photos, add Our Blends

--- a/queensofgoodness/about.html
+++ b/queensofgoodness/about.html
@@ -123,20 +123,46 @@
     <div class="container-xl" id="hero">
       <div class="row g-3">
         <div class="image-container">
-          <img src="static/img/SinksHives_hd.jpg" class="img-fluid img-banner">
+          <img src="static/img/QueensofGoodnessDuo.avif" class="img-fluid img-banner">
           <div class="overlay-text-ul">
             <h2>About</h2>
           </div>
         </div>
       </div>
-      <div class="row g-3">
+      <div class="row g-1">
         <div class="card bl-card">
           <div class="card-body">
-            <h5>We craft small-batch creamed raw Wyoming honey, blending it with whole freeze-dried
-              fruits and premium spices. Sourced from local beekeepers, our honey undergoes a
-              week-long transformation into a luxuriously smooth, spreadable treat made with the
-              finest ingredients—organic, single-origin, and fair trade whenever possible.
+            <h5>We source raw unfiltered honey directly from trusted local beekeepers
+              and enrich it with gourmet spices and nutrient-rich freeze-dried fruits.
+              Each batch is hand-crafted using a proprietary week-long crystallization
+              and blending process that yields a velvety-smooth, spreadable product
+              with bold natural flavor and real nutrition.
             </h5>
+          </div>
+        </div>
+      </div>
+      <div class="row row-cols-1 row-cols-lg-2 g-3">
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-header text-center">Our Story</div>
+            <video class="card-video-top" controls poster="static/img/SinksHives.jpg">
+              <source src="static/img/Queens%20of%20Goodness_intro_sm.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-header text-center">How We Started</div>
+            <div class="card-body">
+              <p class="card-text">I got my first beehive in 2018 and was instantly hooked.
+                I loved the learning, the chores, and just hanging out with the bees.
+                After leaving my NASA research career, I wanted a new challenge that
+                combined science, wellness, and my love of bees. That’s how Queens of
+                Goodness was born&mdash;our creamed raw honey is delicious, easy to use,
+                and full of bold natural flavor and real nutrition.
+                <br>
+                -- Susan</p>
+            </div>
           </div>
         </div>
       </div>
@@ -144,18 +170,36 @@
         <div class="col">
           <div class="card h-100">
             <div class="card-header text-center">Our Honey</div>
-            <img class="card-img-top" src="static/img/SinksSmoker.jpg">
+            <img class="card-img-top" src="static/img/QueensofGoodnessHoneyFrame.avif">
             <div class="card-body">
               <h5 class="card-title text-center">Raw Local Honey</h5>
-              <p class="card-text">We are beekeepers and all of our honey is
+              <p class="card-text">All of our honey is
                 harvested from hives in Wyoming, a state known for its clean air and abundant
                 wildflowers. We work closely with local beekeepers who share our commitment to
                 sustainable, ethical practices. Each jar of creamed raw honey is carefully
-                hand-crafted to preserve its natural enzymes, antioxidants, and health benefits,
-                ensuring that you receive a product that is both delicious and good for you.</p>
+                hand-crafted to preserve its natural enzymes, antioxidants, and health benefits.
+              </p>
             </div>
           </div>
         </div>
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-header text-center">Our Blends</div>
+            <img class="card-img-top" src="static/img/ProductStack.avif">
+            <div class="card-body">
+              <h5 class="card-title text-center">Whole Natural Ingredients</h5>
+              <p class="card-text">We carefully select spices and fruits from suppliers
+                that share our commitment to bring you the highest quality pure natural foods.
+                We use organic, single-origin, and fair-trade ingredients wherever we can.
+                There are no extracts or refined ingredients in any of our blends. Just the
+                flavor and nutrition from the honey, whole fruits and spices so that it is
+                naturally delicious.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row row-cols-1 row-cols-md-2 g-3">
         <div class="col">
           <div class="card h-100">
             <div class="card-header text-center">Our Mission</div>
@@ -171,32 +215,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row row-cols-1 row-cols-md-2 g-3">
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-header text-center">Our Story</div>
-            <video class="card-img-top" controls>
-              <source src="static/img/Queens%20of%20Goodness_intro_sm.mp4" type="video/mp4">
-            </video>
-            <div class="card-body">
-              <h5 class="card-title text-center">Beekeeping</h5>
-              <p class="card-text">I got my first beehive in 2018 and in spite of all the rookie
-                mistakes, had a successful first year and I was hooked. Subsequent years presented
-                many learning experiences, which with help from mentors and the internet I was
-                somehow able to keep my bees thriving and expanding. Just being a successful hobbyist
-                with 5 hives is a lot of work and from the side-liner and commercial beekeepers I
-                met I knew that was not the path for me. After retiring from a career as a NASA
-                researcher, I needed to keep busy and decided to create business centered around bees
-                and health. Healthy bees and other pollinators in our ecosystems, and healthy products
-                for our customers and community. Our premium creamed raw honey products reflect our
-                values and the vision to create something special for anyone to enjoy, knowing that
-                we've preserved all the goodness from the bees and enhanced by creaming along with a
-                few carefully chosen natural ingredients.
-                -- Susan</p>
-            </div>
-          </div>
-        </div>
         <div class="col">
           <div class="card h-100">
             <div class="card-header text-center">Support Pollinators</div>
@@ -205,42 +223,42 @@
                 <tr>
                   <td>
                     <a href="https://www.xerces.org" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/XS-2024-web-logo.png" class="img-fluid" width=70%>
+                      <img src="static/img/XS-2024-web-logo.png" class="img-fluid" width=96>
                     </a>
                   </td>
                   <td>
-                    Xerces Society for Invertebrate Conservation promotes the conservation of invertebrates and their habitats
+                    <b>Xerces Society for Invertebrate Conservation</b> promotes the conservation of invertebrates and their habitats
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <a href="https://www.projectapism.org" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/PAmlogotype.png" class="img-fluid" width=70%>
+                      <img src="static/img/PAmlogotype.png" class="img-fluid" width=96>
                     </a>
                   </td>
                   <td>
-                    Project Apis m. promotes science driven solutions for the beekeeping community
+                    <b>Project Apis m.</b> promotes science driven solutions for the beekeeping community
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <a href="https://www.pollinatorstewardship.org" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/Pollinator%20Stewardship%20Council.png" class="img-fluid" width=40%>
+                      <img src="static/img/Pollinator%20Stewardship%20Council.png" class="img-fluid" width=48>
                     </a>
                   </td>
                   <td>
-                    Pollinator Stewardship Council, Inc. works to defend pollinators from the adverse impacts of pesticides
+                    <b>Pollinator Stewardship Council</b> works to defend pollinators from the adverse impacts of pesticides
                   </td>
                 </tr>
                 <tr>
                   </td>
                   <td>
                     <a href="https://www.pollinator.org" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/PollinatorLogo-Tag2@2x.png" class="img-fluid">
+                      <img src="static/img/PollinatorLogo-Tag2@2x.png" class="img-fluid" width=96>
                     </a>
                   </td>
                   <td>
-                    Pollinator Partnership promotes the health of pollinators, through conservation, education, and research
+                    <b>Pollinator Partnership</b> promotes the health of pollinators, through conservation, education, and research
                   </td>
                 </tr>
               </table>
