--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -122,7 +122,7 @@
     <div class="container-xl" id="hero">
       <div class="row g-3">
         <div class="image-container">
-          <img src="static/img/Display.jpg" class="img-fluid img-banner">
+          <img src="static/img/Display.avif" class="img-fluid img-banner">
           <div class="overlay-text-ul">
             <h2>Shop</h2>
           </div>
@@ -236,36 +236,6 @@
                 </tr>
                 <tr>
                   <td>
-                    <a href="https://www.mountain-fresh-produce.com/" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/MountainFresh.webp" class="img-fluid" width=20%>
-                    </a>
-                  </td>
-                  <td>
-                    461 S Pine St, Pinedale, WY
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <a href="https://www.pearlonbridge.com" target="_blank" rel="noopener noreferrer">
-                      <h4>The Lucky Pearl</h4>
-                    </a>
-                  </td>
-                  <td>
-                    100 N 1st St, Saratoga, WY
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <a href="https://broadwaybakery.net" target="_blank" rel="noopener noreferrer">
-                      <h4>Broadway Bakery</h4>
-                    </a>
-                  </td>
-                  <td>
-                    509 Broadway St, Thermopolis, WY
-                  </td>
-                </tr>
-                <tr>
-                  <td>
                     <a href="https://www.facebook.com/p/Natures-Corner-100063679985266/" target="_blank" rel="noopener noreferrer">
                       <h4>Nature's Corner</h4>
                     </a>
@@ -289,7 +259,45 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100">
+          <div class="card tg-card">
+            <div class="card-header text-center">Shop & Barista Drinks</div>
+            <div class="card-body text-center">
+              <table class="logo-table">
+                <tr>
+                  <td>
+                    <a href="https://www.mountain-fresh-produce.com/" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/MountainFresh.webp" class="img-fluid" width=40%>
+                    </a>
+                  </td>
+                  <td>
+                    461 S Pine St,<br> Pinedale, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://www.pearlonbridge.com" target="_blank" rel="noopener noreferrer">
+                      <h4>The Lucky Pearl</h4>
+                    </a>
+                  </td>
+                  <td>
+                    100 N 1st St,<br> Saratoga, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://broadwaybakery.net" target="_blank" rel="noopener noreferrer">
+                      <h4>Broadway Bakery</h4>
+                    </a>
+                  </td>
+                  <td>
+                    509 Broadway St, Thermopolis, WY
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <br>
+          <div class="card">
             <div class="card-header text-center">Shop & On-line Orders</div>
             <div class="card-body text-center">
               <table class="logo-table">
