Replace bee with product, shorten text

--- a/queensofgoodness/index.html
+++ b/queensofgoodness/index.html
@@ -123,10 +123,7 @@
     <div class="container-xl" id="hero">
       <div class="row g-3">
         <div class="image-container">
-          <img src="static/img/Purple-flower-bee-pano2.jpg" class="img-fluid img-banner">
-          <div class="overlay-text-ul">
-            <h2>Raw Local Honey</h2>
-          </div>
+          <img src="static/img/ProductRow.avif" class="img-fluid img-banner">
         </div>
       </div>
       <div class="row row-cols-1 row-cols-md-2 g-3">
@@ -135,12 +132,10 @@
             <div class="card-header text-center">Premium Creamed Raw Honey</div>
             <div class="card-body">
               <p class="card-text">
-                Raw unfiltered honey is sourced directly from trusted local beekeepers
-                and enriched with fair-trade spices and nutrient-rich freeze-dried fruits.
-                Each batch is hand-crafted using a
-                proprietary week-long crystallization and blending process that yields
-                a velvety-smooth, spreadable product with distinctive flavors and all
-                the goodness of raw local honey.
+                Unfiltered and unheated honey is enriched with gourmet spices and nutrient-rich freeze-dried fruits.
+                Each batch is hand-crafted using a proprietary process that yields
+                a velvety-smooth, spreadable product with bold natural flavor
+                and real nutrition.
               </p>
             </div>
           </div>
@@ -148,7 +143,7 @@
         <div class="col-md-6 col-lg-8">
           <div class="card tg-card h-100">
             <div class="card-body">
-              <img class="card-img-top" src="static/img/ProductStack.avif" alt="Product stack">
+              <img class="card-img-top" src="static/img/GoldenLatte.avif" alt="Golden Latte">
             </div>
             <div class="card-footer text-center">
               <a class="learn-more" href="products.html">Learn More</a>
@@ -172,7 +167,7 @@
       </div>
       <div class="row row-cols-2 g-3">
         <div class="col">
-          <img src="static/img/GoldenLatte.avif" class="img-fluid img-center">
+          <img src="static/img/Toast.avif" class="img-fluid img-center">
         </div>
         <div class="col">
           <img src="static/img/Oatmeal.avif" class="img-fluid img-center h-100">
@@ -210,7 +205,7 @@
           <img src="static/img/6.jpg" class="img-fluid img-center">
         </div>
         <div class="col">
-          <img src="static/img/SiloFlowers.jpg" class="img-fluid img-center">
+          <img src="static/img/Bagel.avif" class="img-fluid img-center">
         </div>
       </div>
 
