--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -254,6 +254,16 @@
                     152 S College Ave, Fort Collins, CO
                   </td>
                 </tr>
+                <tr>
+                  <td>
+                    <a href="https://www.rydersgourmetmarket.com/" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/Ryders_Logo_v3.5_Website.webp" class="img-fluid" width=40%>
+                    </a>
+                  </td>
+                  <td>
+                    3106 Cardinal Drive, Vero Beach, FL
+                  </td>
+                </tr>
               </table>
             </div>
           </div>
