Simplify, less fluff and more product focus

--- a/queensofgoodness/brochure.html
+++ b/queensofgoodness/brochure.html
@@ -65,12 +65,20 @@
           <div class="card-header text-center">Premium Creamed Raw Honey</div>
           <div class="card-body">
             <p class="card-text">
-              Raw unfiltered Wyoming honey is sourced directly from trusted local beekeepers
+              Wyoming honey is sourced directly from trusted local beekeepers
               and enriched with gourmet spices and nutrient-rich freeze-dried fruits.
               Each batch is hand-crafted using a proprietary week-long controlled crystallization
               and blending process for a rich, velvety-smooth, spreadable product with bold
               natural flavors and real nutrition.</li>
             </p>
+            <ul>
+              <li>Turmeric Ginger</li>
+              <li>Elderberry</li>
+              <li>Cinnamon Spice</li>
+              <li>Blueberry Lemon</li>
+              <li>Lemon</li>
+              <li>Ginger</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -107,21 +115,6 @@
         </div>
       </div>
       <div class="panel">
-        <div class="card bl-card">
-          <div class="card-header text-center">Indulge in Nature's Best</div>
-          <div class="card-body">
-            <p>Raw unfiltered local honey, gourmet spices and whole freeze-dried fruits</p>
-            <ul>
-              <li>Turmeric Ginger</li>
-              <li>Elderberry</li>
-              <li>Blueberry Lemon</li>
-              <li>Cinnamon Spice</li>
-              <li>Lemon</li>
-              <li>Ginger</li>
-            </ul>
-          </div>
-        </div>
-        <br>
         <div>
           <img src="static/img/Oatmeal.avif" class="img-fluid img-center">
         </div>
@@ -130,10 +123,8 @@
           <div class="card-header text-center">Wholesale Orders</div>
           <div class="card-body">
             <p class="card-text">
-              <b>MSRP</b> (Grocery): $13.99 - $14.99<br>
-              <b>MSRP</b> (Speciality): $14.99 - $16.99<br>
-              <b>Wholesale</b>: Case of 24 jars ($200)<br>
-              <b>Wholesale</b>: Partial case ($8.50 / jar)<br>
+              <b>MSRP</b>: $14.95 - $15.95<br>
+              <b>Wholesale</b>: Case of 24 ($200, $8.33/jar)<br>
               <b>Barista</b>: 21 oz ($20, 50-60 servings)<br>
               <b>Barista</b>: 88 oz ($65, 210-250 servings)<br>
               <b>Delivery</b>: Contact us<br>
@@ -168,7 +159,6 @@
             <p>Prolonged exposure to temperatures over 95&deg;F (35&deg;C) may result in
               the product becoming more liquid but it remains safe and delicious</p>
             <p>Shelf life is up to 4 years from production date</p>
-            <p>Warm gently and stir to soften if needed</p>
           </div>
         </div>
       </div>
@@ -187,17 +177,6 @@
               empower our customers to make healthier, more informed choices. We believe in the
               power of food to nourish not just the body, but the soul, and our products
               reflect that belief in every jar.</p>
-          </div>
-        </div>
-        <br>
-        <div class="card tg-card">
-          <div class="card-header text-center">Honey Information</div>
-          <div class="card-body">
-            <p>Raw Wyoming honey from local hives</p>
-            <p>From the hive to the jar the honey is never filtered or heated</p>
-          </div>
-          <div class="card-footer text-center">
-            <a class="learn-more" href="honey.html">Learn More</a>
           </div>
         </div>
       </div>
