--- a/queensofgoodness/index.html
+++ b/queensofgoodness/index.html
@@ -143,12 +143,27 @@
         <div class="col-md-6 col-lg-8">
           <div class="card tg-card h-100">
             <div class="card-body">
-              <img class="card-img-top" src="static/img/GoldenLatte.avif" alt="Golden Latte">
-            </div>
-            <div class="card-footer text-center">
-              <a class="learn-more" href="products.html">Learn More</a>
+
+              <a href="products.html#TG" class="text-decoration-none">
+                <img class="card-img-top" src="static/img/GoldenLatte.avif" alt="Golden Latte">
+              </a>
+              <div class="overlay-text-ul">
+                <h2>Golden Milk</h2>
+              </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="row row-cols-2 g-3">
+        <div class="col">
+          <a href="products.html#TG" class="text-decoration-none">
+            <img src="static/img/Toast.avif" class="img-fluid img-center">
+          </a>
+        </div>
+        <div class="col">
+          <a href="products.html#E" class="text-decoration-none">
+            <img src="static/img/Oatmeal.avif" class="img-fluid img-center h-100">
+          </a>
         </div>
       </div>
 
@@ -156,61 +171,41 @@
         <div class="image-container">
           <img src="static/img/Colorful%20hives.jpg" class="img-fluid img-banner">
           <div class="overlay-text-ll">
-            <h2>From the Hive to Your Table</h2>
+            <h2>Apiary & Farm to Table</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-cols-2 g-3">
+        <div class="col">
+          <div class="image-container">
+            <img src="static/img/5.jpg" class="img-fluid img-center">
+            <div class="overlay-text-ll">
+              <h2>Gourmet Spices</h2>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="image-container">
+            <img src="static/img/2.jpg" class="img-fluid img-center">
+            <div class="overlay-text-ll">
+              <h2>Whole Fruits</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row g-3">
+        <div class="image-container">
+          <img src="static/img/Purple-flower-bee-pano2.jpg" class="img-fluid img-banner">
+          <div class="overlay-text-ll">
+            <h2>Indulge in Nature's Finest Blends</h2>
           </div>
         </div>
       </div>
 
       <div class="row">
-        <h2 class="bolder text-center"><i>Crafted to taste good and do good by supporting
-            local beekeepers, farmers and you</i></h2>
-      </div>
-      <div class="row row-cols-2 g-3">
-        <div class="col">
-          <img src="static/img/Toast.avif" class="img-fluid img-center">
-        </div>
-        <div class="col">
-          <img src="static/img/Oatmeal.avif" class="img-fluid img-center h-100">
-        </div>
-      </div>
-
-      <div class="row">
-        <h2 class="bolder text-center">
-          <i>Raw unfiltered honey<br>
-            Fair-trade spices<br>
-            Nutrient-rich freeze-dried fruits</i></h2>
-      </div>
-
-      <div class="row row-cols-2 g-3">
-        <div class="col">
-          <img src="static/img/Golden%20milk%20with%20spices.jpg" class="img-fluid img-center h-100">
-        </div>
-        <div class="col">
-          <img src="static/img/5.jpg" class="img-fluid img-center">
-        </div>
-        <div class="col">
-          <img src="static/img/2.jpg" class="img-fluid img-center">
-        </div>
-        <div class="col">
-          <img src="static/img/3.jpg" class="img-fluid img-center">
-        </div>
-      </div>
-
-      <div class="row">
-        <h2 class="bolder text-center"><i>Supporting Local Beekeepers & Small Farmers</i></h2>
-      </div>
-
-      <div class="row row-cols-2 g-3">
-        <div class="col">
-          <img src="static/img/6.jpg" class="img-fluid img-center">
-        </div>
-        <div class="col">
-          <img src="static/img/Bagel.avif" class="img-fluid img-center">
-        </div>
-      </div>
-
-      <div class="row">
-        <h2 class="bolder text-center"><i>Indulge in Nature's Finest Blends</i></h2>
+        <h2 class="bolder text-center"><i></i></h2>
       </div>
 
 
@@ -265,34 +260,6 @@
         </div>
       </div>
 
-      <div class="row row-cols-1 row-cols-md-2 g-3">
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-header text-center">Education & Events</div>
-            <div class="card-body">
-              <a href="bees.html">
-                <img src="static/img/HoneyBeeDay24.jpeg" class="img-fluid">
-              </a>
-            </div>
-            <div class="card-footer text-center">
-              <a class="learn-more" href="bees.html">Learn More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-header text-center">Know Your Honey</div>
-            <div class="card-body">
-              <a href="honey.html">
-                <img src="static/img/Jars%20of%20Honey.jpg" class="img-fluid">
-              </a>
-            </div>
-            <div class="card-footer text-center">
-              <a class="learn-more" href="honey.html">Learn More</a>
-            </div>
-          </div>
-        </div>
-      </div>
     </div><!--/.container-->
 
     <footer>
