Cleanup and more product focus

--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -129,46 +129,26 @@
           </div>
         </div>
       </div>
-      <div class="row row-cols-1 row-cols-sm-2 g-3">
-        <div class="col">
-          <div class="card tg-card h-100">
-            <img class="card-img-top" src="static/img/1.jpg" alt="Product stack">
-          </div>
-        </div>
-        <div class="col">
+      <div class="row row-cols-1 row-cols-md-2 g-3">
+        <div class="col-md-6 order-md-1">
           <div class="card bl-card h-100">
-            <div class="card-header text-center">Premium Creamed Raw Honey</div>
             <div class="card-body">
               <ul class="card-text">
-                <li>Raw unfiltered honey with all the goodness from the bees</li>
-                <li>Sourced directly from local beekeepers</li>
-                <li>Creamed to a rich, velvety-smooth and spreadable consistency</li>
+                <li>Unfiltered and unheated Wyoming honey</li>
+                <li>Gourmet spices and freeze-dried whole fruits</li>
+                <li>Clean label with no extracts or flavorings</li>
+                <li>Hand-crafted, velvety-smooth blends</li>
+                <li>Bold natural flavor and real nutrition</li>
               </ul>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row row-cols-1 row-cols-sm-2 g-3">
-        <div class="col-sm-6 order-sm-2">
+        <div class="col-md-6 order-md-2">
           <div class="card tg-card h-100">
-            <img class="card-img-top" src="static/img/5.jpg" alt="Product stack">
-          </div>
-        </div>
-        <div class="col-sm-6 order-sm-1">
-          <div class="card bl-card h-100">
-            <div class="card-header text-center">Indulge in Nature's Finest Blends</div>
-            <div class="card-body">
-              <ul class="card-text">
-                <li>Hand-crafted in small batches</li>
-                <li>Fair-trade and premium spices</li>
-                <li>Nutrient-rich freeze-dried fruits</li>
-                <li>Clean label and ethically sourced</li>
-              </ul>
-            </div>
+            <img class="card-img-top" src="static/img/1.jpg" alt="Bees on honeycomb">
           </div>
         </div>
       </div>
-
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
         <div class="col" id="TG">
           <div class="card tg-card h-100">
