Move ingredients from bottom to just below title

--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -153,96 +153,90 @@
         <div class="col" id="TG">
           <div class="card tg-card h-100">
             <div class="card-header text-center">Turmeric Ginger</div>
+            <p class="ingredients"><b>INGREDIENTS:</b> raw honey, turmeric, ginger, cinnamon, pepper</p>
             <img class="card-img-top" src="static/img/GoldenLatte.avif" alt="Golden Milk">
             <div class="card-body">
-              <h5 class="card-title text-center">Golden Milk</h5>
               <ul class="card-text">
-                <li>Easily craft a delicious golden milk latte - just stir a spoonful into your favorite hot beverage</li>
+                <li>Easily craft a delicious <b>golden milk latte</b> - just stir a spoonful into your favorite hot beverage</li>
                 <li>Enhance your oatmeal with spice and sweetness</li>
                 <li>Spread on toast, grahams or waffles</li>
                 <li>Enjoy a spoonful or make a tonic</li>
               </ul>
-              <p><b>INGREDIENTS:</b> raw honey, turmeric, ginger, cinnamon, pepper</p>
             </div>
           </div>
         </div>
         <div class="col" id="PS">
           <div class="card ps-card h-100">
             <div class="card-header text-center">Cinnamon Spice</div>
+            <p class="ingredients"><b>INGREDIENTS:</b> raw honey, cinnamon, turmeric, ginger, nutmeg, allspice, clove, pepper</p>
             <img class="card-img-top" src="static/img/Bagel.avif" alt="Cinnamon Spice">
             <div class="card-body">
-              <h5 class="card-title text-center">Cinnamon Spice Bagel</h5>
               <ul class="card-text">
                 <li>Create a festive hot chai - just stir a spoonful into your favorite hot beverage</li>
                 <li>Spread on bagels, pancakes or waffles</li>
                 <li>Enhance your oatmeal with spice and sweetness</li>
                 <li>Use as a delicious icing or pair with cheese</li>
               </ul>
-              <p><b>INGREDIENTS:</b> raw honey, cinnamon, turmeric, ginger, nutmeg, allspice, clove, pepper</p>
             </div>
           </div>
         </div>
         <div class="col" id="E">
           <div class="card e-card h-100">
             <div class="card-header text-center">Elderberry</div>
+            <p class="ingredients"><b>INGREDIENTS:</b> raw honey, organic elderberries</p>
             <img class="card-img-top" src="static/img/Oatmeal.avif" alt="Elderberry">
             <div class="card-body">
-              <h5 class="card-title text-center">Elderberry Boost</h5>
               <ul class="card-text">
-                <li>Add a berry boost to your oatmeal or hot cereal - just stir in a spoonful</li>
-                <li>Create a soothing tonic or refreshing beverage</li>
-                <li>Spread on biscuits or bagels</li>
+                <li>Add a berry boost to your oatmeal or hot cereal</li>
+                <li>Make a simple syrup to create refreshing honey-sweetened beverages</li>
+                <li>Spread on biscuits, bagels, English muffins, toast or waffles</li>
                 <li>Treat yourself to a spoonful</li>
               </ul>
-              <p><b>INGREDIENTS:</b> raw honey, organic elderberries</p>
             </div>
           </div>
         </div>
         <div class="col" id="BL">
           <div class="card b-card h-100">
             <div class="card-header text-center">Blueberry Lemon</div>
+            <p class="ingredients"><b>INGREDIENTS:</b> raw honey, blueberries, organic lemons</p>
             <img class="card-img-top" src="static/img/Toast.avif" alt="Blueberry Lemon">
             <div class="card-body">
-              <h5 class="card-title text-center">Blueberry Spread</h5>
               <ul class="card-text">
-                <li>Spread on biscuits, bagels or waffles</li>
+                <li>Spread on biscuits, bagels, English muffins, toast or waffles</li>
                 <li>Pair with apples or cheese for Charcuterie</li>
                 <li>Add a berry boost to your hot drink or oatmeal</li>
                 <li>Enjoy a spoonful or as delicious icing on a treat</li>
               </ul>
-              <p><b>INGREDIENTS:</b> raw honey, blueberries, organic lemons</p>
             </div>
           </div>
         </div>
         <div class="col" id="G">
           <div class="card g-card h-100">
             <div class="card-header text-center">Ginger</div>
+            <p class="ingredients"><b>INGREDIENTS:</b> raw honey, ginger</p>
             <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Ginger_Tea_.jpg" alt="Ginger">
             <div class="card-body">
-              <h5 class="card-title text-center">Ginger Tea</h5>
               <ul class="card-text">
                 <li>Stir a dollop into your favorite herbal tea or hot water, maybe add a splash of lemon juice</li>
                 <li>Spread on biscuits, bagels or pair with strong cheese</li>
                 <li>Create flavorful glazes, add to stir-fries or drizzle over roasted vegetables</li>
                 <li>Enjoy a spoonful or add a sweet and spicy kick to your table</li>
               </ul>
-              <p><b>INGREDIENTS:</b> raw honey, ginger</p>
             </div>
           </div>
         </div>
         <div class="col" id="L">
           <div class="card l-card h-100">
             <div class="card-header text-center">Lemon</div>
+            <p class="ingredients"><b>INGREDIENTS:</b> raw honey, organic lemons</p>
             <img class="card-img-top" src="static/img/3.jpg" alt="Lemon">
             <div class="card-body">
-              <h5 class="card-title text-center">Morning Tonic</h5>
               <ul class="card-text">
                 <li>Create a morning tonic by stirring a dollop into herbal tea or hot water</li>
                 <li>Spread on biscuits, English muffins or toast</li>
                 <li>Add a little zing to glazes or salad dressing</li>
                 <li>Enjoy a spoonful or as delicious icing on a treat</li>
               </ul>
-              <p><b>INGREDIENTS:</b> raw honey, organic lemons</p>
             </div>
           </div>
         </div>
